# JTK-Database-App

./: .gitignore  CMakeLists.txt  README.md
dbs/jtdb/: data.txt
include/dbTerminal/: dbTerminal.hpp
include/jtkDatabase/: jtkDatabase.hpp
include/jtkTable/: jtkTable.hpp
include/tableTerminal/: tableTerminal.hpp
include/utils/: utils.hpp
src/: jtkDB.cpp
src/dbTerminal/: CMakeLists.txt  dbTerminal.cpp
src/jtkDatabase/: CMakeLists.txt  jtkDatabase.cpp
src/jtkTable/: CMakeLists.txt  jtkTable.cpp
src/tableTerminal/: CMakeLists.txt  tableTerminal.cpp
src/utils/: CMakeLists.txt  utils.cpp
